# KMRL-Front-Back

./: PROJECT_STRUCTURE.md  package-lock.json
KMRL-Front-AI/: .gitignore  App Feature Roadmap and Design Prompt.md  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  setup.bat  tailwind.config.ts
KMRL-Front-AI/backend/: .env.example  .gitignore  Dockerfile  README.md  check_all_users.py  check_user.py  create_user.py  docker-compose.yml  install_missing.bat  list_users.py  pyproject.toml  quick_check.py  requirements.txt  reset_user.py  run.bat  setup.bat  setup_complete.bat  setup_fresh.bat  test_document.py  test_document.txt  test_security.py  update_password.py
KMRL-Front-AI/backend/app/: __init__.py  main.py
KMRL-Front-AI/backend/app/api/: ai.py  auth.py  documents.py  graph.py  schemas.py
KMRL-Front-AI/backend/app/core/: config.py  database.py  security.py
KMRL-Front-AI/backend/app/models/: __init__.py  document.py  user.py
KMRL-Front-AI/backend/app/services/: ai_service.py  graph_service.py  ocr_service.py
KMRL-Front-AI/md files/: BACKEND_PROTOTYPE_ROADMAP.md  BACKEND_REQUIREMENTS.md  BACKEND_ROADMAP.md
KMRL-Front-AI/src/: index.css
KMRL-Front-AI/src/components/admin/: UserManagement.tsx
KMRL-Front-AI/src/components/ai/: AIChatPage.tsx  FloatingChatbot.tsx
KMRL-Front-AI/src/components/analytics/: AnalyticsDashboard.tsx
KMRL-Front-AI/src/components/ar/: ARPreview.tsx
KMRL-Front-AI/src/components/auth/: LoginPage.tsx
KMRL-Front-AI/src/components/compliance/: ComplianceCenter.tsx
KMRL-Front-AI/src/components/dashboard/: ComplianceWidget.tsx  RecentDocuments.tsx  StatsCards.tsx
KMRL-Front-AI/src/contexts/: AuthContext.tsx
KMRL-Front-AI/src/i18n/: LanguageProvider.tsx  translations.ts
KMRL-Front-AI/src/pages/: Index.tsx
KMRL-Front-AI/src/services/: api.ts
(+16 files in other folders)
